# label-ai-v1

./: .gitignore  README.md  docker-compose.yml  prompt.txt
backend/: .gitignore  Dockerfile  README.md  label_checker.db  main.py  pyproject.toml
backend/app/api/v1/: labels.py  rules.py  schemas.py
backend/app/core/: config.py
backend/app/crud/: crud_analysis.py
backend/app/db/: session.py
backend/app/models/: analysis_result.py
backend/app/services/: file_processing.py  ocr.py  pdf_parser.py  rule_engine.py  visual_analysis.py
backend/app/utils/: __init__.py  custom_exceptions.py  file_ops.py  image_utils.py  text_utils.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/features/label-checker/: AnalysisResult.tsx  HighlightOverlay.tsx  ImageUploader.tsx  RulesUploader.tsx
frontend/lib/: api.ts  types.ts
