[tool.poetry]
name = "label-ai-backend"
version = "0.1.0"
description = "Backend for the AI-powered Regulatory Label Checker"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core FastAPI and related libraries
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-multipart = "^0.0.9"

# --- UPDATED AI, CV, and File Parsing Libraries ---
# Note: pytesseract has been removed.

# EasyOCR and its dependencies
easyocr = "^1.7.1"
# EasyOCR requires a deep learning framework. PyTorch is the most common.
# These are the CPU-only versions, which are easier to install and sufficient for this use case.
torch = "^2.3.0"
torchvision = "^0.18.0"

# Other libraries
Pillow = "^10.3.0"
opencv-python-headless = "^4.9.0"
PyYAML = "^6.0.1"
python-docx = "^1.1.2"
pyzbar = "^0.1.9"
numpy = "^2.3.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

# Linting and Formatting
ruff = "^0.4.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configurations ---
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "C4", "B", "A", "COM", "LOG", "Q", "PT", "SIM", "TID", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

